<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/btstate" android:id="@+id/textView" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/disabled" android:id="@+id/txtBTStatePid"
			android:textColor="@color/RED" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/serverstate" android:id="@+id/textView5" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/disconnected" android:id="@+id/txtServerStatePid"
			android:textColor="@color/RED" />
	</LinearLayout>
	<LinearLayout android:weightSum="1" android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent">
		<TextView android:id="@+id/TextView05" android:layout_weight="0.5"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="0dp" android:text="@string/k"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidK"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<LinearLayout android:weightSum="1" android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent">
		<TextView android:id="@+id/TextView05" android:layout_weight="0.5"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="0dp" android:text="@string/ti"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidTi"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent"
		android:weightSum="1">
		<TextView android:layout_weight="0.5"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/TextView05" android:layout_height="wrap_content"
			android:text="@string/td" android:layout_width="0dp"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidTd"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<LinearLayout android:weightSum="1" android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent">
		<TextView android:id="@+id/TextView05" android:layout_weight="0.5"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="0dp" android:text="@string/tr"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidTr"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<LinearLayout android:weightSum="1" android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent">
		<TextView android:id="@+id/TextView05" android:layout_weight="0.5"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="0dp" android:text="@string/n"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidN"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent"
		android:weightSum="1">
		<TextView android:layout_weight="0.5"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/TextView05" android:layout_height="wrap_content"
			android:text="@string/beta" android:layout_width="0dp"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidBeta"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero">
		</EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/LinearLayout05" android:layout_width="match_parent"
		android:weightSum="1">
		<TextView android:layout_weight="0.5"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/TextView05" android:layout_height="wrap_content"
			android:text="@string/h" android:layout_width="0dp"></TextView>
		<EditText android:layout_weight="0.5" android:id="@+id/txtPidH"
			android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zero"></EditText>
	</LinearLayout>
	<CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/integratoron" android:checked="false" android:id="@+id/chckBoxPidIntegratorOn"></CheckBox>
	<Button android:id="@+id/btnPidUpdate" android:layout_height="wrap_content"
		android:layout_width="match_parent" android:text="@string/update"
		android:onClick="updatePID"></Button>
</LinearLayout>
